--- a/templates/master.html
+++ b/templates/master.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<title>Predict you dog breed!</title>
+	<title>Predict you dogr breed!</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style> ul{ list-style-type: none;} </style>
