--- a/templates/master.html
+++ b/templates/master.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<title>Predict you dogr breed!</title>
+	<title>Predict your dog breed!</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style> ul{ list-style-type: none;} </style>
@@ -23,7 +23,7 @@
 	  		</form>
 	  		<br>
 	  		<br>
-	  		<img src="temp_img.jpg" alt="img">
+	  		<img src="static/img/temp_img.jpg" width="50%" height="70%" alt="img">
           
 	  		
 	  		<h5> {{ data.prediction }} </h5> 
