--- a/templates/master.html
+++ b/templates/master.html
@@ -23,7 +23,7 @@
 	  		</form>
 	  		<br>
 	  		<br>
-	  		<img src="static/img/temp_img.jpg" width="50%" height="70%" alt="img">
+	  		<img src="/static/img/temp_img.jpg" width="50%" height="70%" alt="img">
           
 	  		
 	  		<h5> {{ data.prediction }} </h5> 
